<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maib_bg"
    android:padding="16dp"
    android:clipToPadding="false">


    <!-- WELCOME -->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingTop="24dp"
        android:text="@string/hello"
        android:textColor="@color/maib_green_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ACCOUNTS LIST -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAccounts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        android:paddingBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <!-- BOTTOM MENU -->
    <LinearLayout
        android:id="@+id/bottomMenu"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginBottom="48dp"
        android:background="@android:color/transparent"
        android:baselineAligned="false"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvAccounts">

        <!-- Open account -->
        <TextView
            android:id="@+id/btnOpenAccount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/ic_add_account_desc"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/open"
            android:textColor="@color/maib_green"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_add_account" />

        <!-- Rates -->
        <TextView
            android:id="@+id/btnRates"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/ic_rates_desc"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/rates"
            android:textColor="@color/maib_green"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_rates" />

        <!-- Charts -->
        <TextView
            android:id="@+id/btnCharts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/ic_chart_desc"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/charts"
            android:textColor="@color/maib_green"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_chart" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
