<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:clipToPadding="false"
    tools:context=".ui.ChartActivity">

    <Spinner
        android:id="@+id/spinnerCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_spinner"
        android:dropDownVerticalOffset="4dp"
        android:popupBackground="@color/maib_white"
        android:spinnerMode="dropdown" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="From: "
            android:textColor="@color/maib_text_muted" />

        <Button
            android:id="@+id/btnFromDate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:text="@string/from" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="To: "
            android:textColor="@color/maib_text_muted" />

        <Button
            android:id="@+id/btnToDate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:text="@string/to" />
    </LinearLayout>

    <Button
        android:id="@+id/btnShowChart"
        style="@style/MaibButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/show"
        android:textColor="@color/maib_white" />

    <com.futurecoders.smartexchange.ui.views.SimpleLineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1" />

</LinearLayout>
